@@ -1,112 +1,0 @@
-                                Release Summary
-
-                              asterisk-10.0.0-rc3
-
-                                Date: 2011-12-08
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-10.0.0-rc2.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 mjordan                
-   2 bebuild                
-   2 lmadsen                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 346139   | bebuild | Create Asterisk 10.0.0-rc3    |                   |
-   |          |         | from Asterisk 10.0.0-rc2      |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 346140   | lmadsen | Update .version and remote    |                   |
-   |          |         | existing summary files.       |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 346141   | lmadsen | Merge changes from revisions: |                   |
-   |          |         | 346040, 345640, 345830        |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 346142   | bebuild | Update ChangeLog              |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 347772   | mjordan | Creating rc3 tag              |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 347773   | mjordan | Duh, wrong rc.                |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 347809   | mjordan | Merged BLF patch and security |                   |
-   |          |         | patches                       |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                         |    2
- CHANGES                          |    5 +
- ChangeLog                        |   74 ++++++++++++++++++++
- Makefile                         |    4 -
- asterisk-10.0.0-rc2-summary.html |   68 ------------------
- asterisk-10.0.0-rc2-summary.txt  |  103 ---------------------------
- build_tools/make_defaults_h      |    1
- channels/chan_sip.c              |  144 ++++++++++++++++++++++++++-------------
- configs/asterisk.conf.sample     |    1
- configs/sip.conf.sample          |   15 ++--
- include/asterisk/paths.h         |    1
- main/asterisk.c                  |   18 ++--
- main/db.c                        |    6 -
- 13 files changed, 204 insertions(+), 238 deletions(-)
-
-     ----------------------------------------------------------------------
