@@ -1,3 +1,7 @@
+2011-12-15  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.0.0 Released.
+
 2011-12-08  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.0.0-rc3 Released.
